Fixes tables in dark mode.

--- a/structurizr-application/src/main/resources/static/static/css/structurizr-dark.css
+++ b/structurizr-application/src/main/resources/static/static/css/structurizr-dark.css
@@ -13,6 +13,7 @@ body {
 
 .table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     border-top: 1px solid #444444;
+    background: #111111;
 }
 
 .table > thead > tr > th {
